# NeuralNetwork

./: .gitignore  ActivationFunction.cpp  ActivationFunction.h  CMakeLists.txt  ComputeBlock.cpp  ComputeBlock.h  LossFunction.cpp  LossFunction.h  Net.cpp  Net.h  README.md  ReadMnist.cpp  ReadMnist.h  Relu.cpp  Relu.h  Sigmoid.h  Softmax.cpp  Softmax.h  Tests.cpp  Tests.h  main.cpp
Presentation/: example-beamer-HSE.tex  readme.txt
Presentation/HSE-theme/: beamerthemeHSE.sty
TermPaper/: bibl.bib  commands.sty  template.tex
